--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="tech.arnav.conduit_flutter_riverpod">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="conduit_flutter_riverpod"
         android:name="${applicationName}"
