--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   google_fonts: ^2.3.2
   retrofit: ^3.0.1
   logger: ^1.1.0
+  auto_route: ^4.0.1
 
 dev_dependencies:
   flutter_test:
@@ -36,6 +37,7 @@ dev_dependencies:
   retrofit_generator: ^4.0.0
   build_runner: ^2.1.10
   json_serializable: ^6.0.0
+  auto_route_generator: ^4.0.0
 
 
 flutter:
